steg chat app updated

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 /* @import "@uploadthing/react/styles.css"; */
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
